Checkpoint: Added error handling for wrong promo codes. When user enters incorrect code, login page shows "Invalid Code..." message and redirects to error.html after 2 seconds. Error page displays "Invalid Promo Code" message with countdown timer and "Back to Login" button for immediate redirect.

--- a/public/index.html
+++ b/public/index.html
@@ -224,9 +224,14 @@
                     window.location.reload();
                 }, 1000);
             } else {
-                errorMsg.textContent = 'Invalid promo code. Please try again.';
-                errorMsg.classList.add('show');
-                submitBtn.disabled = false;
+                // Wrong promo code - redirect to error page
+                submitBtn.disabled = true;
+                submitBtn.textContent = 'Invalid Code...';
+                
+                // Show error page after 2 seconds
+                setTimeout(() => {
+                    window.location.href = '/error.html?code=invalid_promo';
+                }, 2000);
             }
         }
 
